Safari scrollbar flickering fix.

--- a/src-docs/src/content/style.scss
+++ b/src-docs/src/content/style.scss
@@ -24,3 +24,14 @@
         }
     }
 }
+
+// Fix for Safari scrollbar flickering for some screen resolutions when
+// custom `--webkit` scrollbars styles are applied.
+:global {
+    react-bolivianite-grid {
+        background: var(--color--accent);
+    }
+    .scrollview {
+        background: white;
+    }
+}
